--- a/css/style.css
+++ b/css/style.css
@@ -29,29 +29,27 @@ html::-webkit-scrollbar-thumb{
     scroll-behavior: smooth;
 }
 
-nav{
+header{
     width: 100%;
     height: 15.22vh;
     background-color: #fff;
     display: flex;
     justify-content: right;
     align-items: center;
-    position: fixed;
-    top: 0;
 }
 
-nav ul{
+header ul{
     margin: 0 3em 0 0;
 }
 
 
-nav ul li{
+header ul li{
     display: inline-block;
     margin: 0 1em;
 }
 
 
-nav ul li a{
+header ul li a{
     color: #00becd;
     text-decoration: none;
     font-size: 20px;
@@ -59,13 +57,25 @@ nav ul li a{
 }
 
 
-nav ul li a:hover{
+header ul li a:hover{
     transition: .2s ease-in-out;
     background-color: #00becd;
     padding: .7em 1em;
     color: #fff;
     border-radius: 1em;
 }
+
+.circle{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    clip-path: circle(50em at left 60em);
+    background-color: #106074;
+    z-index: -1;
+}
+
 
 .cont-1{
     display: flex;
@@ -75,34 +85,36 @@ nav ul li a:hover{
     width: 100%;
 }
 
-.img-logo{
+.imgBox{
     width: 50%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-end;
+    transform: translateY(-3em);
+}
+.imgBox img{
+    max-width: 80%;
+    image-resolution: 400dpi;
+    filter: drop-shadow(0em 2em 1em #0000006e);
 }
 
-.img-logo img{
-    width: 70%;
-}
-
-.titulo-1{
+.boxTitle-1{
     align-items: center;
     color: #00becd;
     width: 50%;
     text-align: center;
     margin: 0 5em;
 }
-.titulo-1 h1{
-    font-size: 3em
+
+.boxTitle-1 h1{
+    font-size: 3em;
 }
 
-.titulo-1 p{
+.boxTitle-1 p{
     font-size: 1.3em;
     margin: 0 0 2em 0;
 }
 
-.titulo-1 a{
+.boxTitle-1 a{
     padding: 1em 2em;
     border-radius: 1em;
     color: #00becd;
@@ -111,7 +123,7 @@ nav ul li a:hover{
     transition: .2s ease-in-out;
 }
 
-.titulo-1 a:hover{
+.boxTitle-1 a:hover{
     color: #fff;
     padding: 1em 2em;
     border-radius: 1em;
@@ -132,6 +144,7 @@ nav ul li a:hover{
 .content-1 h1{
     text-align: center;
     color: #00becd;
+    font-size: 2em;
 }
 
 .content-1 p{
@@ -165,6 +178,7 @@ nav ul li a:hover{
 .content-2 h1{
     text-align: center;
     color: #00becd;
+    font-size: 2em;
 }
 
 .content-2 p{
@@ -198,22 +212,23 @@ footer{
 
 
 @media screen and (max-width: 740px){
-    nav{
+
+    navbar{
+        display: none;
+    }
+    .cont-1{
+        flex-direction: column;
+    }
+    .titulo-1 h1,a{
         display: none;
     }
 
-    .cont-1{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: 30rem;
-    }
-    .titulo-1 h1{
+    .titulo-1 p{
         margin: 0;
     }
+
     .img-logo{
-        display: none;
+        width: 100%;
     }
     .section-1{
         display: flex;
