--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ navbar{
     color: #fff;
     border-radius: 1em;
     font-weight: 500;
-    padding: .7em .7em;
+    padding: .5em .7em;
 }
 
 
@@ -61,7 +61,7 @@ navbar{
     text-decoration: none;
     font-size: 1.2em;
     transition: .2s ease-in-out;
-    padding: .7em .7em;
+    padding: .5em .7em;
     background-color: #fff;
 }
 
@@ -106,7 +106,7 @@ navbar{
 
 .flexart-1{
     margin: 2vh 0;
-    background-color: #0e47c7;
+    background-color: #2667da;
     padding: 2em;
     border-top-right-radius: 3em;
     border-bottom-right-radius: 3em;
@@ -119,7 +119,7 @@ navbar{
 }
 
 .flexart-1 h1{
-    color: #477ce3;
+    color: #2667da;
     text-align: center;
     font-size: clamp(1.5625rem, 0.2135rem + 2.9167vw, 2rem);
 }
@@ -132,12 +132,27 @@ navbar{
     width: 50%;
     background-color: #fff;
     padding: 2em;
-    color: #0e47c7;
+    color: #2667da;
     flex: 40%;
     border-radius: 3em;
     z-index: 1;
 }
 
+.flexLinks{
+    width: 100%;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+
+.flexLinks a{
+    text-align: center;
+    padding: .7em;
+    background-color: #2667da;
+    border-radius: 3em;
+    color: #fff;
+    font-size: clamp(0.8125rem, 0.2344rem + 1.25vw, 1rem);
+}
 .flexart-3{
     width: 35%;
     background-color: #fff;
@@ -145,7 +160,7 @@ navbar{
     border-top-left-radius: 5%;
     border-bottom-left-radius: 5%;
     z-index: 1;
-    background-color: #0e47c7;
+    background-color: #2667da;
     color: #fff;
     flex: 50%;
     margin-left: 1.5em;
@@ -157,7 +172,7 @@ footer{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #106074;
+    background-color: #2667da;
     flex-direction: column;
 }
 
