--- a/css-register/style.css
+++ b/css-register/style.css
@@ -1,149 +1,151 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
+    transition: .2s ease-in-out;
 }
 
-@font-face {
-    font-family: 'Font1';
-    src: url(../fonts/beckman-heavy.otf);
+html{
+    scroll-behavior: smooth;
 }
 
-@font-face {
-    font-family: 'Grandesign';
-    src: url(../fonts/Grandesign\ Neue\ Roman.ttf);
+html::-webkit-scrollbar{
+    width: 0em;
 }
 
-.content-form{
-    width: 100%;
+body{
     height: 100vh;
+}
+
+
+navbar{
+    height: 15.22vh;
+    width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 
-form{
-    padding: 2em 4em;
-    background-color: #00becd;
-    filter: drop-shadow(0 1.4em .5em #0000004d);
+.flexLogo{
+    width: 50%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.flexLogo img{
+    max-width: 30%;
+    margin: 0 0 0 5em;
+}
+
+nav{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 3em 0 0;
+}
+
+nav ul li{
+    display: inline;
+}
+
+nav ul li a{
+    transition: .2s ease-in-out;
+    color: #0e47c7;
     border-radius: 1em;
-    color: #fff;
-    margin: 0 0 0 3em;
-    font-family: 'Grandesign';
+    font-weight: 500;
+    padding: .5em .7em;
+    text-decoration: none;
 }
 
 
-label {
+nav ul li a:hover{
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.1em;
+    transition: .2s ease-in-out;
+    padding: .5em .7em;
+    background-color: #2667da;
+}
+
+.flexCont{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.flexText{
+    margin: 0 5vh;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.flexText h1{
+    font-size: clamp(2rem, 1.2292rem + 1.6667vw, 2.25rem);
+    color: #2667da;
+}
+
+.flexText p{
+    color: #2667da;
+    font-size: clamp(0.8125rem, 0.2344rem + 1.25vw, 1rem);
+}
+
+.flexForm{
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    margin: 0 5vh;
+}
+
+form{
+    background-color: #2667da;
+    padding: 2em;
+    margin: 0 1em;
+    border-radius: 1em;
+}
+
+label{
     display: block;
-    font-family: 'Grandesign';
-    margin: .6em 0 0.3em 0;
+    margin: 0.5em 0 0 0;
+    color: #fff;
 }
 
 input{
-    width: 24em;
-    padding: .9em .9em .5em .7em;
-    border-radius: 1em;
-    border: none;
-    outline: none;
-    font-family: 'Grandesign';
+    width: 30em;
+    height: 3em;
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+    border-bottom: .1em solid #fff;
+    background-color: transparent;
+    color: #fff;
 }
 
 input::placeholder{
-    color: #000;
-    font-family: 'Grandesign';
+    color: #fff;
+    font-size: clamp(0.8125rem, 0.2344rem + 1.25vw, 1rem);
 }
 
+select{
+    width: 100%;
+    height: 3em;
+    outline: none;
+    border-radius: .4em;
+    border: none;
+}
 .btns{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 1em 0 0 0;
-}
-
-button{
-    margin: 0 1em 0 ;
-    padding: .7em;
-    border-radius: 10%;
-    background-color: transparent;
-    outline: none;
-    border: solid .1em #fff;
-    cursor: pointer;
-    color: #fff;
-    transition: .5s ease-in-out;
-
-}
-
-button:hover{
-    background-color: #fff;
-    transition: .5s ease-in-out;
-    color: #00becd;
-
-}
-
-select{
-    background-color: #fff;
-    border: none;
-    border-radius: 1em;
-    height: 3em;
-    width: 25.5em;
-    padding-left: 0.7em;
-    outline: none;
-}
-
-option{
-    background-color: #fff;
-    border: none;
-    border-radius: 1em;
-    outline: none;
-}
-
-.content-other{
-    width: 30%;
-    display: inline-block;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin: 0 0 0 2.5em;
-    font-family: 'Font1';
-}
-
-.content-other h1{
-    font-size: 2em;
-    color: #00becd;
-}
-
-.content-other b,p{
-    font-size: 1.4em;
-    color: #0e656b;
-}
-
-
-.content-other img{
-    width: 100%;
-}
-.link{
-    margin: 1.2em 0;
-}
-.link a{
-    text-decoration: none;
-    font-size: 1em;
     padding: 1em;
-    border-radius: 5%;
-    color: #00becd;
-    border: solid .1em #00becd;
-    transition: .5s ease-in-out;
-
 }
 
-.link:visited{
-    color: #00becd;
+.btns button{
+    width: 8em;
+    margin: 0 1em;
+    padding: .7em;
+    border-radius: 1em;
+    outline: none;
+    border: none;
+    cursor: pointer;
 }
-
-.link a:hover{
-    background-color: #00becd;
-    color: #fff;
-    transition: .5s ease-in-out;
-}
-
-
-
-
