--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -6,18 +6,19 @@
     transition: .2s ease-in-out;
 }
 
-html{
+html {
     scroll-behavior: smooth;
 }
 
-html::-webkit-scrollbar{
+html::-webkit-scrollbar {
     width: 0em;
 }
-header{
+
+header {
     background-image: linear-gradient(to bottom, #0e47c7, #1957d1, #2667da, #3476e2, #4385ea, #5592ef, #679ff3, #78acf7, #8ebbf8, #a5c9f9, #bcd7fa, #d3e5fb);
 }
 
-navbar{
+navbar {
     width: 100%;
     height: 15.22vh;
     display: flex;
@@ -25,30 +26,30 @@ navbar{
     align-items: center;
 }
 
-.flexLogo{
+.flexLogo {
     width: 50%;
     display: flex;
     justify-content: flex-start;
     align-items: center;
 }
 
-.flexLogo img{
+.flexLogo img {
     max-width: 30%;
     margin: 0 0 0 5em;
 }
 
-nav{
+nav {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0 3em 0 0;
 }
 
-nav ul li{
+nav ul li {
     display: inline;
 }
 
-nav ul li a{
+nav ul li a {
     transition: .2s ease-in-out;
     color: #fff;
     border-radius: 1em;
@@ -58,7 +59,7 @@ nav ul li a{
 }
 
 
-nav ul li a:hover{
+nav ul li a:hover {
     color: #2667da;
     text-decoration: none;
     font-size: 1.1em;
@@ -67,7 +68,7 @@ nav ul li a:hover{
     background-color: #fff;
 }
 
-.flexbox{
+.flexbox {
     width: 100%;
     position: relative;
     display: flex;
@@ -76,18 +77,18 @@ nav ul li a:hover{
     height: 35em;
 }
 
-.flexImg{
+.flexImg {
     width: 60%;
     display: flex;
     justify-content: center;
 }
 
-.flexImg img{
+.flexImg img {
     max-width: 100%;
     image-resolution: 400dpi;
 }
 
-.flexText{
+.flexText {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -95,18 +96,19 @@ nav ul li a:hover{
     text-align: center;
     color: #fff;
 }
-.flexText p{
+
+.flexText p {
     width: 80%;
 }
 
-.section-1{
+.section-1 {
     display: flex;
     align-items: flex;
     justify-content: center;
     margin: 5vh 0vh;
 }
 
-.flexart-1{
+.flexart-1 {
     margin: 2vh 0;
     background-color: #2667da;
     padding: 2em;
@@ -120,17 +122,18 @@ nav ul li a:hover{
 
 }
 
-.flexart-1 h1{
+.flexart-1 h1 {
     color: #2667da;
     text-align: center;
     font-size: clamp(1.5625rem, 0.2135rem + 2.9167vw, 2rem);
 }
-.flexart-1 p{
+
+.flexart-1 p {
     color: #fff;
     font-size: clamp(0.8125rem, 0.2344rem + 1.25vw, 1rem);
 }
 
-.flexart-2{
+.flexart-2 {
     width: 50%;
     background-color: #fff;
     padding: 2em;
@@ -141,14 +144,14 @@ nav ul li a:hover{
     z-index: -3;
 }
 
-.flexLinks{
+.flexLinks {
     width: 100%;
     display: flex;
     justify-content: left;
     align-items: center;
 }
 
-.flexLinks a{
+.flexLinks a {
     text-align: center;
     padding: .7em;
     background-color: #2667da;
@@ -157,7 +160,8 @@ nav ul li a:hover{
     font-size: clamp(0.8125rem, 0.2344rem + 1.25vw, 1rem);
     text-decoration: none;
 }
-.flexart-3{
+
+.flexart-3 {
     width: 35%;
     background-color: #fff;
     padding: 2em;
@@ -172,49 +176,115 @@ nav ul li a:hover{
     z-index: 50;
 }
 
-.section-2{
+.section-2 {
     width: 100%;
     display: flex;
     margin: 5vh 0vh;
 }
 
-.article-2{
+.article-2 {
     background-color: #fff;
     width: 50%;
     padding: 2em;
     margin: 0 5vh;
 }
-.article-2 h1{
+
+.article-2 h1 {
     text-align: center;
     color: #2667da;
 }
-.article-2 p{
+
+.article-2 p {
     color: #2667da;
     font-size: clamp(0.8125rem, 0.2344rem + 1.25vw, 1rem);
 }
-.flexSquare{
-    width: 50%;
+
+.adver{
+    display: none;
+}
+
+.flexSquare {
+    width: 60%;
+    height: 33em;
     display: flex;
     justify-content: center;
     background-color: #2667da;
     border-radius: 3em;
 }
 
-.right, .left{
+.right,
+.left {
     width: 50%;
+    text-align: center;
+    color: #fff;
 }
 
-.right{
+.right {
     background-color: #106aff;
 }
 
-.left{
+.left {
     background-color: #2667da;
     border-radius: 3em;
 }
 
+.left h1, .right h1{
+    font-size: clamp(1rem, 0.6146rem + 0.8333vw, 1.125rem);
+    margin: 3vh;
+    font-weight: 400;
+}
 
-footer{
+.left form, .right form{
+    text-align: left;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    margin: 0 3vw;
+    pointer-events: none;
+
+}
+
+form > select{
+    outline: none;
+    border: none;
+    height: 3em;
+}
+
+form > label{
+    display: block;
+    margin: .5em 0;
+}
+
+input{
+    height: 3em;
+    background-color: transparent;
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+    border-bottom: .2em solid #fff;
+    color: #fff;
+}
+
+.btns-links{
+    color: #2667da;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 4vh;
+}
+
+.btns-links a{
+    color: inherit;
+    background-color: #fff;
+    border-radius: 1em;
+    display: block;
+    margin: 1.5vh 0;
+    padding: .5em 1em;
+}
+footer {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -223,22 +293,63 @@ footer{
 }
 
 
-@media screen and (max-width: 740px){
+@media screen and (max-width: 740px) {
 
-    navbar, .circle, .flexImg,.art-img1, .art-img1 img, .art-img2, .art-img2 img{
+    navbar,
+    .circle,
+    .flexImg,
+    .art-img1,
+    .art-img1 img,
+    .art-img2,
+    .art-img2 img {
         display: none;
     }
 
-    .section-1{
+    .section-1 {
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
         margin: 2vh;
     }
-    .flexart-1, .flexart-2, .flexart-3{
+
+    .flexart-1,
+    .flexart-2,
+    .flexart-3 {
         width: 100%;
         margin: 2vh 5vh;
         border-radius: 3em;
     }
+    .section-2{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .article-2{
+        width: 100%;
+        margin: 0vh;
+        padding: 5vh;
+    }
+
+    .flexSquare{
+        width: 90%;
+        border-radius: 1em;
+    }
+
+    .right, .left{
+        border-radius: 1em;
+        margin: 0;
+        text-align: center;
+    }
+
+    .adver{
+        display: block;
+        text-align: center;
+        color: #2667da;
+        margin: 2vh;
+    }
+
 }
