--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,13 @@
     transition: .2s ease-in-out;
 }
 
+:root{
+    --color1: #038a8f;
+    --color2: #c1fdff;
+    --color3: #fff;
+    
+}
+
 html {
     scroll-behavior: smooth;
 }
@@ -14,9 +21,6 @@ html::-webkit-scrollbar {
     width: 0em;
 }
 
-header {
-    background-image: linear-gradient(to bottom, #0e47c7, #1957d1, #2667da, #3476e2, #4385ea, #5592ef, #679ff3, #78acf7, #8ebbf8, #a5c9f9, #bcd7fa, #d3e5fb);
-}
 
 navbar {
     width: 100%;
@@ -24,6 +28,7 @@ navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 100;
 }
 
 .flexLogo {
@@ -33,8 +38,15 @@ navbar {
     align-items: center;
 }
 
-.flexLogo img {
-    max-width: 30%;
+.flexLogo a{
+    width: 40%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.flexLogo a img {
+    max-width: 100%;
     margin: 0 0 0 5em;
 }
 
@@ -43,6 +55,8 @@ nav {
     justify-content: center;
     align-items: center;
     margin: 0 3em 0 0;
+    z-index: 300;
+
 }
 
 nav ul li {
@@ -51,85 +65,177 @@ nav ul li {
 
 nav ul li a {
     transition: .2s ease-in-out;
-    color: #fff;
+    color: var(--color3);
     border-radius: 1em;
     font-weight: 500;
     padding: .5em .7em;
     text-decoration: none;
+    z-index: 340;
+
 }
 
 
 nav ul li a:hover {
-    color: #2667da;
+    color: var(--color1);
     text-decoration: none;
     font-size: 1.1em;
     transition: .2s ease-in-out;
     padding: .5em .7em;
-    background-color: #fff;
+    background-color: var(--color3);
+}
+
+#darkmode-icon{
+    cursor: pointer;
+    margin: 0 2vh;
 }
 
 .flexbox {
     width: 100%;
+    height: 34.7em;
     position: relative;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    height: 35em;
 }
 
-.flexImg {
-    width: 60%;
-    display: flex;
-    justify-content: center;
-}
-
-.flexImg img {
-    max-width: 100%;
-    image-resolution: 400dpi;
-}
 
 .flexText {
+    width: 50%;
     display: flex;
     justify-content: center;
-    align-items: center;
     flex-direction: column;
-    text-align: center;
-    color: #fff;
+    margin: 0 0 0 7vh;
+    color: var(--color1);
+}
+
+.flexText h1{
+    font-size: clamp(2.5rem, 2.469rem + 0.0669vw, 3.125rem);
+    text-align: left;
 }
 
 .flexText p {
-    width: 80%;
+    width: 70%;
+    font-size: clamp(1.125rem, 1.1157rem + 0.0201vw, 1.3125rem);
 }
 
-.section-1 {
+.flexText img{
+    max-width: 60%;
+    width: 100%;
+    pointer-events: none;
+    z-index: 400;
+}
+
+.flexbox .cont-texts{
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    width: 768px;
+    height: 768px;
+    overflow: hidden;
+    pointer-events: none;
+}
+
+.flexbox .cont-texts .box-texts{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 768px;
+    height: 768px;
+    border-radius: 50%;
     display: flex;
-    align-items: flex;
+    justify-content: center;
+    align-items: center;
+    animation: textsrotate 20s ease-out infinite;
+}
+
+@keyframes textsrotate {
+    0%,20%{
+        transform: rotate(0deg);
+    }
+    25%,45%{
+        transform: rotate(-90deg);
+    }
+    50%,70%{
+        transform: rotate(-180deg);
+    }
+    70%,95%{
+        transform: rotate(-270deg);
+    }
+    100%{
+        transform: rotate(-360deg);
+    }
+}
+
+.flexbox .box-texts .texts{
+    position: absolute;
+    left: 0;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    color: var(--color1);
+    transform: rotate(calc(360deg / 4 * var(--i)));
+    transform-origin: 384px;
+    padding: 2vh;
+    background-color: #fff;
+}
+
+
+.flexbox .texts img{
+    width: 4em;
+}
+
+.flexbox .texts h3{
+    line-height: 1;
+    font-size: clamp(1.6rem, 1.1157rem + 0.0201vw, 1.3125rem);
+    font-weight: 600;
+    text-align: center;
+}
+
+.flexbox .box-texts .circle{
+    width: 560px;
+    height: 560px;
+    border: .2em solid var(--color1);
+    border-radius: 50%;
+}
+
+.flexbox .cont-texts .overlay{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 0;
+    height: 0;
+    border-top: 384px solid var(--color1);
+    border-right: 384px solid var(--color1);
+    border-bottom: 384px solid var(--color1);
+    border-left : 384px solid  transparent;
+}
+
+
+.section-1 {
+    height: 40em;
+    display: flex;
+    align-items: center;
     justify-content: center;
     margin: 5vh 0vh;
+    position: relative;
+    top: 0;
 }
 
 .flexart-1 {
     margin: 2vh 0;
-    background-color: #2667da;
+    background-color: #c1fdff;
     padding: 2em;
     border-top-right-radius: 3em;
     border-bottom-right-radius: 3em;
     flex: 30%;
     margin-right: 1.5em;
-    line-height: normal;
-    filter: drop-shadow(0 0 2em #00000033);
-    z-index: 30;
 
 }
 
-.flexart-1 h1 {
-    color: #2667da;
-    text-align: center;
-    font-size: clamp(1.5625rem, 0.2135rem + 2.9167vw, 2rem);
-}
 
 .flexart-1 p {
-    color: #fff;
+    color: #038a8f;
     font-size: clamp(0.8125rem, 0.2344rem + 1.25vw, 1rem);
 }
 
@@ -137,11 +243,10 @@ nav ul li a:hover {
     width: 50%;
     background-color: #fff;
     padding: 2em;
-    color: #2667da;
+    color: #038a8f;
     flex: 40%;
     border-radius: 3em;
-    box-shadow: 0 0 10em #00000017;
-    z-index: -3;
+    box-shadow: 0 0 1em #0000002d;
 }
 
 .flexLinks {
@@ -154,26 +259,21 @@ nav ul li a:hover {
 .flexLinks a {
     text-align: center;
     padding: .7em;
-    background-color: #2667da;
+    background-color: #038a8f;
     border-radius: 3em;
     color: #fff;
     font-size: clamp(0.8125rem, 0.2344rem + 1.25vw, 1rem);
-    text-decoration: none;
 }
 
 .flexart-3 {
     width: 35%;
-    background-color: #fff;
     padding: 2em;
     border-top-left-radius: 5%;
     border-bottom-left-radius: 5%;
-    z-index: 1;
-    background-color: #2667da;
-    color: #fff;
+    background-color: #c1fdff;
+    color: #038a8f;
     flex: 50%;
     margin-left: 1.5em;
-    filter: drop-shadow(0 0 2em #00000033);
-    z-index: 50;
 }
 
 .section-2 {
@@ -187,15 +287,16 @@ nav ul li a:hover {
     width: 50%;
     padding: 2em;
     margin: 0 5vh;
+    box-shadow: 0 0 1em #038a8f36;
 }
 
 .article-2 h1 {
     text-align: center;
-    color: #2667da;
+    color: #038a8f;
 }
 
 .article-2 p {
-    color: #2667da;
+    color: #038a8f;
     font-size: clamp(0.8125rem, 0.2344rem + 1.25vw, 1rem);
 }
 
@@ -208,7 +309,7 @@ nav ul li a:hover {
     height: 33em;
     display: flex;
     justify-content: center;
-    background-color: #2667da;
+    background-color: #038a8f;
     border-radius: 3em;
 }
 
@@ -220,11 +321,11 @@ nav ul li a:hover {
 }
 
 .right {
-    background-color: #106aff;
+    background-color: #04bdcd;
 }
 
 .left {
-    background-color: #2667da;
+    background-color: #038a8f;
     border-radius: 3em;
 }
 
@@ -240,8 +341,6 @@ nav ul li a:hover {
     display: flex;
     flex-direction: column;
     margin: 0 3vw;
-    pointer-events: none;
-
 }
 
 form > select{
@@ -291,7 +390,11 @@ footer {
     background-color: #2667da;
     flex-direction: column;
 }
-
+@media screen and (max-width: 1115px) {
+    navbar{
+        flex: 50%   ;
+    }
+}
 
 @media screen and (max-width: 740px) {
 
