--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@
     --color3: #fff;
     --bg-color: #fff;
     --coloricon: #00becd;
+    --colorhover: #fff;
+    --colorRes: #f5f5f5;
 }
 
 
@@ -23,6 +25,8 @@
     --color3: #1e293b;
     --bg-color: #0f172a;
     --coloricon: #fff;
+    --colorhover: #344155;
+    --colorRes: #141d2c;
 }
 
 html {
@@ -89,6 +93,7 @@ navbar {
     display: inline;
 }
 
+
 .nav-main ul li a{
     transition: .2s ease-in-out;
     color: var(--colorMain);
@@ -96,13 +101,6 @@ navbar {
     font-weight: 500;
     padding: .5em .7em;
     text-decoration: none;
-}
-
-#darkMode-icon{
-    cursor: pointer;
-    font-size: 2em;
-    color: var(--coloricon);
-    transition: 1s ease-in-out;
 }
 
 .nav-main ul li a:hover {
@@ -114,6 +112,25 @@ navbar {
     background-color: var(--colorMain);
 }
 
+#darkMode-icon{
+    cursor: pointer;
+    font-size: 2em;
+    color: var(--coloricon);
+    transition: 1s ease-in-out;
+}
+.nav-toggle{
+    background-color: transparent;
+    display: none;
+    border: none;
+    outline: none;
+    font-size: 2.7vh;
+    cursor: pointer;
+}
+#menu-right-icon{
+    font-size: 2em;
+    color: var(--coloricon);
+    transition: 1s ease-in-out;
+}
 
 .flexbox {
     width: 100%;
@@ -441,10 +458,72 @@ footer {
 }
 
 @media screen and (max-width: 580px){
-    .nav-main{
-        display: none;
+    navbar .flexLogo{
+        width: 100%;
+        display: flex;
     }
 
+    .flexLogo img{
+        max-width: 100%;
+    }
+
+    .nav-main{
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        width: 100%;
+        position: absolute;
+        z-index: 100;
+    }
+
+    .nav-menu{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        height: calc(100%);
+        overflow-y: auto;
+        background-color: var(--colorRes);
+        transition: left 0.3s;
+        left: 100%;
+        z-index: 50;
+    }
+
+    .btns-nav{
+        display: flex;
+        margin: 0vh 2em 0 0;
+        z-index: 100;
+    }
+
+    .nav-main .nav-menu li{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        padding: 3vh;
+    }
+
+    .nav-main .nav-menu li a{
+        display: flex;
+        justify-content: center;
+        background-color: none;
+    }
+
+    .nav-main .nav-menu li:hover{
+        background-color: var(--colorhover);
+    }
+
+    .nav-toggle{
+        display: flex;
+    }
+
+    .nav-menu_visible{
+        left: 0%;   
+    }
+    
     .flexbox{
         width: 100%;
         display: flex;
@@ -463,7 +542,7 @@ footer {
     }
 
     .flexText h1{
-        font-size: 2em;
+        font-size: 1.8em;
         text-align: center;
     }
 
