--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,6 @@ navbar {
     display: none;
     border: none;
     outline: none;
-    font-size: 2.7vh;
     cursor: pointer;
 }
 #menu-right-icon{
@@ -458,13 +457,9 @@ footer {
 }
 
 @media screen and (max-width: 580px){
-    navbar .flexLogo{
-        width: 100%;
-        display: flex;
-    }
 
-    .flexLogo img{
-        max-width: 100%;
+    .flexLogo{
+        display: none;
     }
 
     .nav-main{
@@ -494,8 +489,13 @@ footer {
 
     .btns-nav{
         display: flex;
+        justify-content: space-between;
+        align-items: center;
         margin: 0vh 2em 0 0;
         z-index: 100;
+    }
+    #darkMode-icon{
+        margin: 0 .5em 0 0;
     }
 
     .nav-main .nav-menu li{
